namespaces/live.cloud-platform.service.justice.gov.uk/laa-crime-moj-forms-adapter-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-crime-moj-forms-adapter-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-non-standard-crime-claims"
    cloud-platform.justice.gov.uk/application: "laa-crime-moj-forms-adapter"
    cloud-platform.justice.gov.uk/owner: "non-standard crime claims: CRM457@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crime-moj-form-adapter"
    cloud-platform.justice.gov.uk/team-name: "crm7team"
    cloud-platform.justice.gov.uk/review-after: "2024-01-05"
